# macbook

./: README.md  docker-compose.yml  pyproject.toml
airflow/dags/: api_downloader.py  datos_diarios.py  json_reader.py  tester_dag.py
data/: 2021-01-13.jsonl  2021-01-13_1.jsonl  2021-01-13_10.jsonl  2021-01-13_11.jsonl  2021-01-13_12.jsonl  2021-01-13_13.jsonl  2021-01-13_14.jsonl  2021-01-13_15.jsonl  2021-01-13_16.jsonl  2021-01-13_17.jsonl  2021-01-13_18.jsonl  2021-01-13_19.jsonl  2021-01-13_2.jsonl  2021-01-13_20.jsonl  2021-01-13_3.jsonl  2021-01-13_4.jsonl  2021-01-13_5.jsonl  2021-01-13_6.jsonl  2021-01-13_7.jsonl  2021-01-13_8.jsonl  2021-01-13_9.jsonl  terrain_detail.csv
data/csv/: 2021-01-17.csv
data/csv/2021-01-16/: 2021-01-16.csv
data/csv/2021-01-17/: 2021-01-17.csv
data/json/2021-01-16/: 2021-01-16.jsonl  2021-01-16_1.jsonl  2021-01-16_10.jsonl  2021-01-16_11.jsonl  2021-01-16_12.jsonl  2021-01-16_13.jsonl  2021-01-16_14.jsonl  2021-01-16_15.jsonl  2021-01-16_2.jsonl  2021-01-16_3.jsonl  2021-01-16_4.jsonl  2021-01-16_5.jsonl  2021-01-16_6.jsonl  2021-01-16_7.jsonl  2021-01-16_8.jsonl  2021-01-16_9.jsonl
data/json/2021-01-17/: 2021-01-17.jsonl  2021-01-17_1.jsonl  2021-01-17_10.jsonl  2021-01-17_11.jsonl  2021-01-17_12.jsonl  2021-01-17_13.jsonl  2021-01-17_14.jsonl  2021-01-17_15.jsonl  2021-01-17_16.jsonl  2021-01-17_17.jsonl  2021-01-17_18.jsonl  2021-01-17_19.jsonl  2021-01-17_2.jsonl  2021-01-17_20.jsonl  (+7 more)
landlord/: api_downloader.py  datos_diarios.py  docker-compose.yml  json_reader.py  main.py  masivo.py
tests/: test_landlord.py
