[tool.poetry]
name = "landlord"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
pandas = "^1.2.0"
requests = "^2.20.0"
jsonlines = "^1.2.0"
apache-airflow = "^2.0.0"
lifelines = "^0.25.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
